path issue fixed

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,9 @@ email: support@turing.jl
 
 description: >- # this means to ignore newlines until "baseurl:"
   Turing is a universal probabilistic programming language with an intuitive modelling interface, composable probabilistic inference, and computational scalability.
-
+baseurl: "/turing-docs" # the subpath of your site, e.g. /blog
 url: "https://gold-developer.github.io/turing-docs/" # the base hostname & protocol for your site, e.g. http://example.com
+
 logo: /assets/images/logo.png
 categories: [fruit, meat, vegetable, cheese, drink]
 lang : en
