--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ dockerhub: Turingjl
 # If commented, will use material hat theme
 logo: "assets/img/favicon.ico"
 logo_pixels: 34
-color: "#106470" # primary color for header, buttons
+color: "#d2e6f5" # primary color for header, buttons
 navbarcolor: "#073c44"
 
 # Build settings
